# regdoc-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
notes/: ragas_results.md  ragas_results_hybrid.json  ragas_results_hyde.json  ragas_results_naive.json  ragas_results_reranked.json
src/: config.py
src/api/routes/: ask.py  chat.py  health.py  ingest.py  metrics.py
src/api/schemas/: ask.py  ingest.py
src/db/: chunks_repo.py  database.py  schema.sql
src/embeddings/: chunker.py  embedder.py
src/observability/: metrics.py
src/prompts/: rag_prompts.py
src/rag/: hybrid_search.py  ingestion.py  parent_child.py  query_expansion.py  reranker.py  retrieval.py
src/security/: prompt_guard.py
src/services/: llm_client.py  token_counter.py
tests/: test_chunker.py  test_embedder.py  test_hybrid_search.py  test_parent_child.py  test_prompt_guard.py  test_query_expansion.py  test_rag_prompts.py  test_reranker.py  test_retrieval.py  test_setup.py  test_token_counter.py
tests/evaluation/: dataset.py  evaluate.py  metrics.py
tests/evaluation/rgpd_docs/: article17.txt  article32.txt  article35.txt  article37.txt  article5.txt  article83.txt
