[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "mistralai>=2.3.1",
    "openai>=2.30.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pypdf>=6.10.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "sqlalchemy>=2.0.49",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
    "uvicorn>=0.44.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "strict"

