[project]
name = "rag-project"
version = "0.1.0"
description = "RAG pipeline for French regulatory documents (RGPD/CNIL/ANSSI)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "mistralai>=2.3.1",
    "pydantic-settings>=2.13.1",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.4.1",
    "sqlalchemy>=2.0.49",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
    "torch>=2.0.0", 
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

# Force torch to install from PyTorch's CPU-only index
# Saves ~4 GB (nvidia CUDA libs + triton + GPU torch binaries)
[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "strict"